# semi-wallet

./: Cargo.toml  README.md  docker-compose.yml  sample.env
migrations/: 20240920052140_create_users_table.sql  20240920054730_create_plans_table.sql  20240920093511_create_orders_table.sql  20240920093543_create_payments_table.sql  20240927120538_create_users_table.down.sql  20240927120538_create_users_table.up.sql  20240927120545_create_plans_table.down.sql  20240927120545_create_plans_table.up.sql  20240927120546_seed_plans_table.down.sql  20240927120546_seed_plans_table.up.sql  20240927120637_create_orders_table.down.sql  20240927120637_create_orders_table.up.sql  20240927120900_create_payments_table.down.sql  20240927120900_create_payments_table.up.sql  20240927121004_create_coins_table.down.sql  20240927121004_create_coins_table.up.sql  20241003111337_create_users_plans_table.down.sql  20241003111337_create_users_plans_table.up.sql  20241010061819_create_users_coins_table.down.sql  20241010061819_create_users_coins_table.up.sql  20250103084532_seed_coins_table.down.sql  20250103084532_seed_coins_table.up.sql
src/: config.rs  handler.rs  http_server.rs  lib.rs  main.rs  repository.rs  router.rs  service.rs  telemetry.rs
src/client/: postgres.rs  redis.rs
src/handler/: api.rs  auth.rs  cmd.rs  coin.rs  error.rs  order.rs  payment.rs  plan.rs  response.rs  user_coin.rs
src/handler/api/: auth.rs  coin.rs  error.rs  order.rs  payment.rs  plan.rs  response.rs  user_coin.rs
src/handler/api/middleware/: jwt_auth.rs
src/handler/cmd/: command.rs  update_users_coins_amount.rs
src/middleware/: jwt_auth.rs
src/repository/: coin.rs  db.rs  models.rs  order.rs  payment.rs  plan.rs  user.rs  user_coin.rs  user_plan.rs
src/service/: .rs  auth.rs  blockchain.rs  coin.rs  payment.rs
src/service/auth/: bcrypt.rs  error.rs  jwt.rs  service.rs
src/service/blockchain/: btc.rs  error.rs  eth.rs  service.rs  sol.rs  trx.rs
src/service/coin/: binance_price_provider.rs  error.rs  price_manager.rs  price_storage.rs  service.rs
src/service/order/: error.rs  service.rs
src/service/payment/: bitpay.rs  error.rs  service.rs  stripe.rs
src/service/plan/: error.rs  service.rs
src/service/user/: error.rs  service.rs
src/service/user_coin/: error.rs  service.rs
src/service/user_plan/: error.rs  service.rs
tests/api/: auth.rs  coin.rs  coins.rs  helpers.rs  main.rs  order.rs  payment.rs  plan.rs  stripe_webhook.rs  user_coin.rs
tests/integration_tests/: api.rs  cmd.rs  helpers.rs  main.rs
tests/integration_tests/api/: auth.rs  coin.rs  order.rs  payment.rs  plan.rs  stripe_webhook.rs  user_coin.rs
tests/integration_tests/cmd/: update_coin_prices.rs  update_users_coins_amount.rs
