[package]
name = "semi-wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
config = "0.14.0"
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "any", "postgres","migrate"] }

