[package]
name = "semi-wallet"
version = "0.1.0"
edition = "2021"

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
[[bin]]
path = "src/main.rs"
name = "semi-wallet"



[dependencies]
axum = "0.7.5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
config = "0.14.0"
chrono = {version = "0.4.38", features = ["serde"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "uuid", "chrono", "any", "postgres", "migrate", "bigdecimal"] }
async-stripe = { version = "0.31", features = ["runtime-tokio-hyper"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
snafu = "0.8.5"
bcrypt = "0.15.1"
jsonwebtoken = "9.3.0"
url = "2.5.2"
uuid = { version = "1.10.0", features = ["v4"] }
reqwest = { version = "0.12.8", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1.0.128"
validator = { version = "0.18.1", features = ["derive"]}
axum-macros = "0.4.2"
bigdecimal = { version = "0.4.5", features = ["serde"] }


[dev-dependencies]
once_cell = "1.20.1"

